--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>
         {% block title %}
         {% endblock title %}
     </title>
+
+    {% load static %}
+    <link rel="stylesheet" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css" type="text/css">
+
 </head>
 <body>
 <div class="navbar-nav">
     {% block content %}
     {% endblock content %}
+
 </div>
+
+<button type="button" class="btn btn-primary">Primary</button>
+
+{% load static %}
+<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
